[gd_scene load_steps=12 format=3 uid="uid://duhqsh5l5bbtm"]

[ext_resource type="Script" path="res://scenes/TitleScreen.gd" id="1_eg0nr"]
[ext_resource type="Material" uid="uid://dlwbyy60pp0e2" path="res://assets/shaders/TitleScreenShaderMaterial.tres" id="2_f6nud"]
[ext_resource type="Script" path="res://classes/AnimatedSprite.gd" id="2_rhavx"]
[ext_resource type="SpriteFrames" uid="uid://xmmicsrmtycf" path="res://assets/images/titlescreen/gfDanceTitle.res" id="2_u0gnt"]
[ext_resource type="SpriteFrames" path="res://assets/images/titlescreen/logoBumpin.res" id="4_dmwg3"]
[ext_resource type="SpriteFrames" uid="uid://6vecp03qpxmj" path="res://assets/images/titlescreen/titleEnter.res" id="5_0ol1a"]
[ext_resource type="PackedScene" uid="uid://bgilym2qsrs4y" path="res://scenes/fonts/Alphabet.tscn" id="6_8oxyx"]
[ext_resource type="Texture2D" uid="uid://db74xyr3ob48e" path="res://assets/images/titlescreen/newgrounds_logo.png" id="7_6kcht"]

[sub_resource type="Animation" id="Animation_ldyfc"]
resource_name = "danceLeft"
length = 0.625004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"gfDance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_mht0r"]
resource_name = "danceRight"
length = 0.625004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"gfDance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 29]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2p0c"]
_data = {
"danceLeft": SubResource("Animation_ldyfc"),
"danceRight": SubResource("Animation_mht0r")
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_eg0nr")

[node name="TitleGroup" type="Node2D" parent="."]
visible = false

[node name="gf" type="AnimatedSprite2D" parent="TitleGroup"]
material = ExtResource("2_f6nud")
position = Vector2(512, 50.4)
sprite_frames = ExtResource("2_u0gnt")
animation = &"gfDance"
frame = 29
frame_progress = 1.0
centered = false
script = ExtResource("2_rhavx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleGroup/gf"]
libraries = {
"": SubResource("AnimationLibrary_j2p0c")
}

[node name="logo" type="AnimatedSprite2D" parent="TitleGroup"]
material = ExtResource("2_f6nud")
position = Vector2(-150, -100)
sprite_frames = ExtResource("4_dmwg3")
animation = &"logo bumpin"
centered = false
script = ExtResource("2_rhavx")

[node name="titleEnter" type="AnimatedSprite2D" parent="TitleGroup"]
material = ExtResource("2_f6nud")
position = Vector2(100, 576)
sprite_frames = ExtResource("5_0ol1a")
animation = &"Press Enter to Begin"
centered = false
script = ExtResource("2_rhavx")

[node name="TextTemplate" parent="." instance=ExtResource("6_8oxyx")]
visible = false
offset_top = 200.0
offset_bottom = 270.0

[node name="TextGroup" type="Node2D" parent="."]

[node name="NgSpr" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 526.4)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_6kcht")

[node name="Flash" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 1280.0
offset_bottom = 720.0
